2007-08-30  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.h (ID_CMD_HELP, ID_CMD_VERIFY_DECRYPT)
	(ID_CMD_SIGN_ENCRYPT, ID_CMD_IMPORT, ID_CMD_MAX)
	(ID_CMD_STR_HELP, ID_CMD_STR_VERIFY_DECRYPT)
	(ID_CMD_STR_SIGN_ENCRYPT, ID_CMD_STR_IMPORT): New macros.
	(class gpgex_t): New member ALL_FILES_GPG.
	* gpgex.cc (gpgex_t::reset): Initialize THIS->all_files_gpg.
	(gpgex_t::Initialize): Check ending of added files.
	(gpgex_t::QueryContextMenu): Create a more involved dummy menu.
	(gpgex_t::InvokeCommand): Show different commands being invoked.

	* gpgex-class.cc (gpgex_class::init): Also register the shell
	extension for directories.
	(gpgex_class::deinit): Unregister shell extension for directories.

2007-08-28  Marcus Brinkmann  <marcus@g10code.de>

	* main.cc (DllRegisterServer): Do not trash gpgex_server::instance.
	* gpgex-class.cc (gpgex_class::init): Now that DllMain loads, we
	can access the DLL file name.

	* main.cc (DllMain): Change return type to "STADPI" to get an
	extern "C" declaration.
	(_gpgex_debug): Remove lazy initialization cruft.  DllMain is
	called now, and initialization works properly.

	* Makefile.am (gpgex_LDADD): Add -lole32.
	* gpgex.def: Rename functions to not carry the @NR thingie.
	* main.h: Many TRACE macros added.
	(DEBUG_INIT, DEBUG_CONTEXT_MENU, STRINGIFY, GUID_FMT, GUID_ARG):
	New macros.
	(_gpgex_debug): New prototype.
	* main.cc: Include <stdarg.h>, <stdio.h> and <shlobj.h>.  Add
	debugging traces.	
	(debug_lock, debug_flags, debug_file): New statics.
	(get_debug_file, debug_init, debug_deinit): New static functions.
	(_gpgex_debug): New function.
	(DllMain): Call debug_init.
	(DllRegisterServer, DllUnregisterServer): Call SHChangeNotify.
	* gpgex.h: Include <vector> and <string>.  Use std::vector and
	std::string namespaces.
	(class gpgex_t): New member filenames, and new method reset.
	* gpgex.cc: Include <vector>, <string>, <stdexcept> and use
	std::vector and std::string namespaces.  Add debugging traces.